<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:targetapi="o"/>
    <item
        android:id="@+id/myCollectionFragment"
        android:contentDescription="@string/content_description_search"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/my_collection" />

    <item
        android:id="@+id/og_only"
        android:contentDescription="@string/content_description_more"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/original_151_only" />
    <item
        android:id="@+id/SHOW_ALL"
        android:contentDescription="@string/show_all"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/show_all" />

</menu>